<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/name" />

		<EditText
		    android:id="@+id/name"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:inputType="textPersonName" >

			<requestFocus />

		</EditText>
	</LinearLayout>

	<TextView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="10dp"
	    android:gravity="center"
	    android:text="@string/birthdate" />

	<DatePicker
	    android:id="@+id/birthdate"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" />

	<Button
	    android:id="@+id/confirm"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal|center_vertical"
	    android:layout_margin="10dp"
	    android:text="@string/confirm" />

</LinearLayout>