<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:orientation="horizontal"
  android:id="@+id/header_layout_root">

	<TextView 
       	android:id="@+id/list_names"
       	android:text="@string/name"
		android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textSize="17dp"
            android:textStyle="bold"
            android:textColor="#ffffffff"
            android:background="#AA000000"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="5dp"/>

	<TextView
		android:id="@+id/list_ages"
        android:text="@string/age"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:textSize="17dp"
            android:textStyle="bold"
            android:textColor="#ffffffff"
            android:background="#AA000000"
        android:layout_alignParentRight="true"
        android:gravity="left"/>

	<TextView
        android:id="@+id/list_birthdays"
        android:text="@string/birthday"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:textSize="17dp"
            android:textStyle="bold"
            android:textColor="#ffffffff"
            android:background="#AA000000"
       	android:layout_toLeftOf="@+id/list_ages"/>

</RelativeLayout>
